cudaq/test/Transforms/device_call_realtime_by_ref_errors.qke
// ========================================================================== //
// Copyright (c) 2026 NVIDIA Corporation & Affiliates.                        //
// All rights reserved.                                                       //
//                                                                            //
// This source code and the accompanying materials are made available under   //
// the terms of the Apache License 2.0 which accompanies this distribution.   //
// ========================================================================== //

// RUN: cudaq-opt %s -split-input-file -verify-diagnostics -pass-pipeline='builtin.module(distributed-device-call{realtime=1})'

func.func private @twoOutputVectors(!cc.stdvec<i32>, !cc.stdvec<i32>) attributes {"cudaq-devicecall"}

func.func @multipleByRefResults(%arg0: !cc.stdvec<i32>, %arg1: !cc.stdvec<i32>) attributes {"cudaq-entrypoint", "cudaq-kernel", no_this} {
  // expected-error @+1 {{'cc.device_call' op realtime device_call lowering supports at most one by-ref stdvec result argument}}
  cc.device_call @twoOutputVectors(%arg0, %arg1) : (!cc.stdvec<i32>, !cc.stdvec<i32>) -> () {by_ref_vec_arg_indices = array<i64: 0, 1>}
  return
}

// -----

func.func private @scalarAndOutput(!cc.stdvec<i32>) -> i32 attributes {"cudaq-devicecall"}

func.func @scalarAndByRefResult(%arg0: !cc.stdvec<i32>) -> i32 attributes {"cudaq-entrypoint", "cudaq-kernel", no_this} {
  // expected-error @+1 {{'cc.device_call' op realtime device_call lowering does not support both scalar and by-ref stdvec results}}
  %0 = cc.device_call @scalarAndOutput(%arg0) : (!cc.stdvec<i32>) -> i32 {by_ref_vec_arg_indices = array<i64: 0>}
  return %0 : i32
}
